test/tests/compiler/18_structures/invalid_parse/extra_credit/union_decl_bad_type_specifier.plx
# Can't combine union specifier with other type specifier

type union a (a: i32)

pub fn main(none) i32 {
    x: union a i32;
    return 0
}
